@@ -1,10 +1,7 @@
 package Calculators;
 
-
 import java.util.LinkedList;
 import java.util.Stack;
-
-
 
 public class EvaluateString 
 {
@@ -16,6 +13,12 @@ public class EvaluateString
 		return(n==1||n==0) ? 1:n*factorial(n-1);
 	}
 	
+	public static float percentage(float n) 
+	{
+		float hund = 10;
+		return (float) (n/hund);
+	}
+	
 	public static float combination(float n, float k) 
 	{
 		return(factorial(n)/factorial(n-k)*factorial(k));
@@ -25,7 +28,17 @@ public class EvaluateString
 		return(factorial(n)/factorial(n-k));
 	}
 	
-	@SuppressWarnings("deprecation")
+	private static boolean isLetter(char ch) {
+		if(Character.isLetter(ch)) return true;
+		return false;
+	}
+
+	public static boolean isNumeric(char ch) 
+	{
+		if(Character.isDigit(ch)||ch =='.') return true;
+		return false;
+	}
+	
 	public static String TokenizeInfix(String expression) 
 	{
 		char[] token = expression.toCharArray();
@@ -48,7 +61,7 @@ public class EvaluateString
 					{func=func+Character.toString(expression.charAt(i));i++;}
 				i--;
 				switch(func) 
-				{
+					{
 				case"cuber":case"sqrr":case"cube":case"sqr":case"log":case"ln":case"abs":
 				case"fact":case"sin":case"cos":case"tan":case"cot":case"sec":case"csc":
 				case"sinh":case"cosh":case"tanh":case"coth":case"sech":case"csch":
@@ -56,46 +69,42 @@ public class EvaluateString
 				case"asinh":case"acosh":case"atanh":case"acoth":case"asech":case"acsch":
 					InfixQueue.addLast(new Token(func.toString()));break;
 				case"e":
-					InfixQueue.addLast(new Token(new Float(Math.exp(1))));break;
+					InfixQueue.addLast(new Token((float)(Math.exp(1))));break;
 				case"π":        		
-					InfixQueue.addLast(new Token(new Float(Math.PI)));break;
+					InfixQueue.addLast(new Token((float)(Math.PI)));break;
 				case"logb":case"comb":case"perm":
 					InfixQueue.addLast(new Token(func.toString(), Token.OpType.BINARY_RIGHT_ASSOC, 100));
         		break;
-				}
-			}break;
-        	case '0' :case '1' :case '2' :case '3' :case '4' :case 'u':
+					}
+				}break;
+        	case '0' :case '1' :case '2' :case '3' :case '4' :
         	case '5' :case '6' :case '7' :case '8' :case '9' :case '.':
         		{
     				numstr=new String();
-    				if(token[i]=='u') numstr=numstr+'-';
-    				else
     				numstr=numstr+Character.toString(token[i]);
     				i++;
     				while (i<expression.length() && isNumeric(expression.charAt(i)))
     					{numstr=numstr+Character.toString(expression.charAt(i));i++;}
     				i--;
-    				InfixQueue.addLast(new Token(new Float(numstr).floatValue()));
+    				InfixQueue.addLast(new Token(Float.valueOf(numstr)));
 				}break;
-        	
         	case '+': case '-': 
         	{
         		
     			if (InfixQueue.isEmpty() || 
-    					//InfixQueue.getLast().ttype==Token.TokenType.OPERATOR || 
+    					InfixQueue.getLast().ttype!=Token.TokenType.NUMBER || 
     						InfixQueue.getLast().ttype==Token.TokenType.BRACKET_LEFT) 
-    				{token[i]='u';i--;}
-				//InfixQueue.addLast(new Token('u', Token.OpType.UNARY_PREFIX, 100));
+    				InfixQueue.addLast(new Token(String.valueOf(token[i]), Token.OpType.UNARY_PREFIX, 100));
 				else 
-					InfixQueue.addLast(new Token(String.valueOf(token[i]), Token.OpType.BINARY_LEFT_ASSOC, 50));
+					InfixQueue.addLast(new Token(String.valueOf(token[i]), Token.OpType.BINARY_LEFT_ASSOC, 40));
     		}break;
         	case'!':case'%':					
-        		InfixQueue.addLast(new Token(String.valueOf(token[i])));break;
+        		InfixQueue.addLast(new Token(String.valueOf(token[i]), Token.OpType.UNARY_POSTFIX, 60));
         	case '^':case '√':
         		InfixQueue.addLast(new Token(String.valueOf(token[i]), Token.OpType.BINARY_RIGHT_ASSOC, 100));
         		break;
         	case '*': case '/':
-        		InfixQueue.addLast(new Token(String.valueOf(token[i]), Token.OpType.BINARY_LEFT_ASSOC, 60));
+        		InfixQueue.addLast(new Token(String.valueOf(token[i]), Token.OpType.BINARY_LEFT_ASSOC, 50));
         		break;
         	case '(' : InfixQueue.addLast(new Token(Token.TokenType.BRACKET_LEFT));break;
         	case ')' : InfixQueue.addLast(new Token(Token.TokenType.BRACKET_RIGHT));break;
@@ -105,19 +114,7 @@ public class EvaluateString
 				}
 			}
 		}
-		//return display(InfixQueue);
 		return InfixQueue.toString();
-	}
-	
-	private static boolean isLetter(char ch) {
-		if(Character.isLetter(ch)) return true;
-		return false;
-	}
-
-	public static boolean isNumeric(char ch) 
-	{
-		if(Character.isDigit(ch)||ch =='.'||ch =='u') return true;
-		return false;
 	}
 	
 	public static String ConvertToPostfix() 
@@ -138,6 +135,8 @@ public class EvaluateString
 				case OPERATOR:
 					switch(t.otype) 
 					{
+						case UNARY_PREFIX: OperatorStack.addLast(t);break;
+						case UNARY_POSTFIX: OperatorStack.addLast(t);break;
 						case BINARY_LEFT_ASSOC:
 							while (!OperatorStack.isEmpty() && OperatorStack.getLast().precidence > t.precidence) 
 								PostfixQueue.addLast(OperatorStack.removeLast());
@@ -170,19 +169,16 @@ public class EvaluateString
 			}
 			else PostfixQueue.addLast(OperatorStack.removeLast());
 		}
-		//return display(PostfixQueue);
 		return PostfixQueue.toString();
 	}
 	
-	@SuppressWarnings("deprecation")
 	public static String Evaluate() 
 	{
 		if (PostfixQueue.size()==0) return "";
 		Token t;
 		float a1;
 		LinkedList<Token> postfixQueue = new LinkedList<Token>(PostfixQueue);
-		Stack<Float> rpevalStack = new Stack<Float>();
-		//rpevalStack.clear();
+		Stack<Float> rpevalStack = new Stack<Float>(); //Reverse Polish Evaluate Stack
 		while (!postfixQueue.isEmpty()) 
 		{
 			t=postfixQueue.removeFirst();
@@ -190,59 +186,58 @@ public class EvaluateString
 			{
 			case NUMBER:rpevalStack.push(t.val);break;
 			case OPERATOR:
-				if(rpevalStack.isEmpty()) {postfixQueue.addLast(t);break;}
 				a1 = rpevalStack.pop();
 				switch(t.op) 
 				{
 					case "+": 
-							if(rpevalStack.isEmpty())rpevalStack.push(a1); 
-								else rpevalStack.push(rpevalStack.pop()+a1);break;
+							if(t.otype==Token.OpType.UNARY_PREFIX)rpevalStack.push(a1); 
+							if(t.otype==Token.OpType.BINARY_LEFT_ASSOC)rpevalStack.push(rpevalStack.pop()+a1);break;
 					case "-":
-							if(rpevalStack.isEmpty())rpevalStack.push(-a1); 
-								else rpevalStack.push(rpevalStack.pop()-a1);break;
+							if(t.otype==Token.OpType.UNARY_PREFIX)rpevalStack.push(-a1); 
+							if(t.otype==Token.OpType.BINARY_LEFT_ASSOC)rpevalStack.push(rpevalStack.pop()-a1);break;
 					case "*":rpevalStack.push(a1*rpevalStack.pop());break;
 					case "/":rpevalStack.push(rpevalStack.pop()/a1);break;
-					case "^":rpevalStack.push(new Float(Math.pow(rpevalStack.pop(),a1)));break;
-					case "√":rpevalStack.push(new Float(Math.pow(a1,1/rpevalStack.pop())));break;
-					case "logb":rpevalStack.push(new Float(Math.log(a1)/Math.log(rpevalStack.pop())));break;
-					case "comb":rpevalStack.push(new Float(combination(a1,rpevalStack.pop())));break;
-					case "perm":rpevalStack.push(new Float(permutation(a1,rpevalStack.pop())));break;
+					case "^":rpevalStack.push((float) Math.pow(rpevalStack.pop(),a1));break;
+					case "√":rpevalStack.push((float) ((Math.pow(a1,1/rpevalStack.pop()))));break;
+					case "logb":rpevalStack.push((float) (Math.log(a1)/Math.log(rpevalStack.pop())));break;
+					case "comb":rpevalStack.push(combination(a1,rpevalStack.pop()));break;
+					case "perm":rpevalStack.push(permutation(a1,rpevalStack.pop()));break;
+					case "%":rpevalStack.push(percentage(a1));break;
+					case "!":rpevalStack.push(factorial(a1));break;
 				}break;
 			case FUNC: 
-				if(rpevalStack.isEmpty()) {postfixQueue.addLast(t);break;}
 				a1 = rpevalStack.pop();
 				switch(t.func) 
 				{
-					case "log":rpevalStack.push(new Float(Math.log10(a1)));break;
-					case "ln":rpevalStack.push(new Float(Math.log(a1)));break;
-					case "cuber":rpevalStack.push(new Float(Math.cbrt(a1)));break;
-					case "sqrr":rpevalStack.push(new Float(Math.sqrt(a1)));break;
-					case "cube":rpevalStack.push(new Float(Math.pow(3,a1)));break;
-					case "sqr":rpevalStack.push(new Float(Math.pow(2,a1)));break;
-					case "fact":rpevalStack.push(new Float(factorial(a1)));break;
-					case "sin":rpevalStack.push(new Float(Math.sin(Math.toRadians(a1))));break;
-					case "cos":rpevalStack.push(new Float(Math.cos(Math.toRadians(a1))));break;
-					case "tan":rpevalStack.push(new Float(Math.tan(Math.toRadians(a1))));break;
-					case "cot":rpevalStack.push(new Float(1/Math.tan(Math.toRadians(a1))));break;
-					case "csc":rpevalStack.push(new Float(1/Math.sin(Math.toRadians(a1))));break;
-					case "sec":rpevalStack.push(new Float(1/Math.cos(Math.toRadians(a1))));break;
-					case "sinh":rpevalStack.push(new Float(Math.sinh(Math.toRadians(a1))));break;
-					case "cosh":rpevalStack.push(new Float(Math.cosh(Math.toRadians(a1))));break;
-					case "tanh":rpevalStack.push(new Float(Math.tanh(Math.toRadians(a1))));break;
-					case "coth":rpevalStack.push(new Float(1/Math.tanh(Math.toRadians(a1))));break;
-					case "csch":rpevalStack.push(new Float(1/Math.sinh(Math.toRadians(a1))));break;
-					case "sech":rpevalStack.push(new Float(1/Math.cosh(Math.toRadians(a1))));break;
-					case "asin":rpevalStack.push(new Float(Math.asin(Math.toRadians(a1))));break;
-					case "acos":rpevalStack.push(new Float(Math.acos(Math.toRadians(a1))));break;
-					case "atan":rpevalStack.push(new Float(Math.atan(Math.toRadians(a1))));break;
-					case "acot":rpevalStack.push(new Float(Math.atan(1/Math.toRadians(a1))));break;
-					case "asinh":rpevalStack.push(new Float(Math.log(a1+Math.sqrt(a1*a1+1))));break;
-					case "acosh":rpevalStack.push(new Float(Math.log(a1+Math.sqrt(a1*a1-1))));break;
-					case "atanh":rpevalStack.push(new Float((1/2)*Math.log((1+a1)/(1-a1))));break;
-					case "acoth":rpevalStack.push(new Float((1/2)*Math.log((a1+1)/(a1-1))));break;
-					case "asech":rpevalStack.push(new Float(Math.log((1+Math.sqrt(1-a1*a1)/a1))));break;
-					case "acsch":rpevalStack.push(new Float(Math.log(((1/a1)+Math.sqrt((1/a1*a1)+1)))));break;
-					case "%":rpevalStack.push(a1/100);break;
+					case "log":rpevalStack.push((float) (Math.log10(a1)));break;
+					case "ln":rpevalStack.push((float)(Math.log(a1)));break;
+					case "cuber":rpevalStack.push((float)(Math.cbrt(a1)));break;
+					case "sqrr":rpevalStack.push((float)(Math.sqrt(a1)));break;
+					case "cube":rpevalStack.push((float)(Math.pow(3,a1)));break;
+					case "sqr":rpevalStack.push((float)(Math.pow(2,a1)));break;
+					case "fact":rpevalStack.push((float)(factorial(a1)));break;
+					case "sin":rpevalStack.push((float)(Math.sin(Math.toRadians(a1))));break;
+					case "cos":rpevalStack.push((float)(Math.cos(Math.toRadians(a1))));break;
+					case "tan":rpevalStack.push((float)(Math.tan(Math.toRadians(a1))));break;
+					case "cot":rpevalStack.push((float)(1/Math.tan(Math.toRadians(a1))));break;
+					case "csc":rpevalStack.push((float)(1/Math.sin(Math.toRadians(a1))));break;
+					case "sec":rpevalStack.push((float)(1/Math.cos(Math.toRadians(a1))));break;
+					case "sinh":rpevalStack.push((float)(Math.sinh(Math.toRadians(a1))));break;
+					case "cosh":rpevalStack.push((float)(Math.cosh(Math.toRadians(a1))));break;
+					case "tanh":rpevalStack.push((float)(Math.tanh(Math.toRadians(a1))));break;
+					case "coth":rpevalStack.push((float)(1/Math.tanh(Math.toRadians(a1))));break;
+					case "csch":rpevalStack.push((float)(1/Math.sinh(Math.toRadians(a1))));break;
+					case "sech":rpevalStack.push((float)(1/Math.cosh(Math.toRadians(a1))));break;
+					case "asin":rpevalStack.push((float)(Math.asin(Math.toRadians(a1))));break;
+					case "acos":rpevalStack.push((float)(Math.acos(Math.toRadians(a1))));break;
+					case "atan":rpevalStack.push((float)(Math.atan(Math.toRadians(a1))));break;
+					case "acot":rpevalStack.push((float)(Math.atan(1/Math.toRadians(a1))));break;
+					case "asinh":rpevalStack.push((float)(Math.log(a1+Math.sqrt(a1*a1+1))));break;
+					case "acosh":rpevalStack.push((float)(Math.log(a1+Math.sqrt(a1*a1-1))));break;
+					case "atanh":rpevalStack.push((float)((1/2)*Math.log((1+a1)/(1-a1))));break;
+					case "acoth":rpevalStack.push((float)((1/2)*Math.log((a1+1)/(a1-1))));break;
+					case "asech":rpevalStack.push((float)(Math.log((1+Math.sqrt(1-a1*a1)/a1))));break;
+					case "acsch":rpevalStack.push((float)(Math.log(((1/a1)+Math.sqrt((1/a1*a1)+1)))));break;
 				}
 			default:break;
 			}
@@ -251,13 +246,9 @@ public class EvaluateString
 	}
 	
 	static String Eval(String str) 
-	{//
-		//return
+	{
 				TokenizeInfix(str);
-				//
-				//return
 				ConvertToPostfix();
-	//
 				return Evaluate();
 	}
 
